# wroclaw

./: CMakeLists.txt  Makefile  README.mkd  functions.c  functions.h  main.c  queue_string.c  queue_string.h  stack_float.c  stack_float.h  stack_string.c  stack_string.h  test_functions.c  test_queue_string.c  test_stack_float.c  test_stack_string.c
